--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,10 +40,30 @@ body {
 			flex-direction: column;
 			padding: 20px;
 
-			.image-src-selector {
+			.video-src-selector {
 				margin: 0 0 10px 0;
-				font-size: 20px;
+				font-size: 18px;
+
+				.webcam-start-button {
+					display: block;
+					padding: 4px 10px;
+					font-size: 14px;
+					background-color: rgb(230, 230, 230);
+					color: #333;
+					border: 2px solid rgb(150, 150, 150);
+					border-radius: 4px;
+					cursor: pointer;
+				}
+
+				#videoFile {
+					padding: 10px;
+				}
 			}
+
+			// .image-src-selector {
+			// 	margin: 0 0 10px 0;
+			// 	font-size: 20px;
+			// }
 
 			.process-start-btn {
 				margin: 20px 0;
@@ -71,15 +91,24 @@ body {
 					width: 500px;
 					height: auto;
 
-					#image {
-						// height: 100%;
+					#video {
 						width: 100%;
+						height: 100%;
 						object-fit: contain;
 						padding: 10px;
 						border: 1px solid #3e3e3e2e;
 						background: #dbdbdb2e;
-						display: none;
 					}
+
+					// #image {
+					// 	// height: 100%;
+					// 	width: 100%;
+					// 	object-fit: contain;
+					// 	padding: 10px;
+					// 	border: 1px solid #3e3e3e2e;
+					// 	background: #dbdbdb2e;
+					// 	display: none;
+					// }
 				}
 
 				.output-content {
@@ -88,18 +117,28 @@ body {
 					width: 500px;
 					height: auto;
 
-					canvas {
-						// height: 100%;
+					#output-canvas {
 						// width: 100%;
+						// height: 100%;
 						// object-fit: contain;
 						padding: 10px;
-						background: #dbdbdb2e;
 						// border: 1px solid #3e3e3e2e;
-					}
-
-					#output-canvas {
+						background: #dbdbdb2e;
 						display: none;
 					}
+
+					// canvas {
+					// 	// height: 100%;
+					// 	// width: 100%;
+					// 	// object-fit: contain;
+					// 	padding: 10px;
+					// 	background: #dbdbdb2e;
+					// 	// border: 1px solid #3e3e3e2e;
+					// }
+
+					// #output-canvas {
+					// 	display: none;
+					// }
 				}
 			}
 		}
@@ -108,9 +147,13 @@ body {
 			.content {
 				padding: 0;
 
-				.image-src-selector {
+				.video-src-selector {
 					margin: 10px 0 10px 20px;
 				}
+
+				// .image-src-selector {
+				// 	margin: 10px 0 10px 20px;
+				// }
 
 				.process-start-btn {
 					margin: 20px 20px;
