play video on output-canvas.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -98,6 +98,7 @@ body {
 						padding: 10px;
 						border: 1px solid #3e3e3e2e;
 						background: #dbdbdb2e;
+						display: none;
 					}
 
 					// #image {
