--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,6 +115,7 @@ body {
   padding: 10px;
   border: 1px solid #3e3e3e2e;
   background: #dbdbdb2e;
+  display: none;
 }
 
 .container .content-wrapper .content .media-wrapper .output-content {
