--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,14 +91,18 @@ body {
 					width: 500px;
 					height: auto;
 
-					#video {
-						width: 100%;
-						height: 100%;
-						object-fit: contain;
+					.videoWrapper {
 						padding: 10px;
-						border: 1px solid #3e3e3e2e;
 						background: #dbdbdb2e;
-						display: none;
+						border: 1px solid #3e3e3e2e;
+
+						#video {
+							width: 100%;
+							// height: 100%;
+							object-fit: contain;
+							// padding: 10px;
+							display: none;
+						}
 					}
 
 					// #image {
@@ -115,17 +119,22 @@ body {
 				.output-content {
 					display: flex;
 					flex-direction: column;
-					width: 500px;
-					height: auto;
+					// width: 500px;
+					// height: auto;
 
-					#output-canvas {
-						// width: 100%;
-						// height: 100%;
-						// object-fit: contain;
+					.videoWrapper {
 						padding: 10px;
-						// border: 1px solid #3e3e3e2e;
 						background: #dbdbdb2e;
-						display: none;
+						border: 1px solid #3e3e3e2e;
+
+						#output-canvas {
+							// width: 100%;
+							// height: 100%;
+							// object-fit: contain;
+							// padding: 10px;
+							// border: 1px solid #3e3e3e2e;
+							display: none;
+						}
 					}
 
 					// canvas {
