--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,13 +107,13 @@ body {
   height: auto;
 }
 
-.container .content-wrapper .content .media-wrapper .input-content .videoWrapper {
+.container .content-wrapper .content .media-wrapper .input-content .video-wrapper {
   padding: 10px;
   background: #dbdbdb2e;
   border: 1px solid #3e3e3e2e;
 }
 
-.container .content-wrapper .content .media-wrapper .input-content .videoWrapper #video {
+.container .content-wrapper .content .media-wrapper .input-content .video-wrapper #video {
   width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
@@ -130,13 +130,10 @@ body {
           flex-direction: column;
 }
 
-.container .content-wrapper .content .media-wrapper .output-content .videoWrapper {
+.container .content-wrapper .content .media-wrapper .output-content #outputVideoWrapper {
   padding: 10px;
   background: #dbdbdb2e;
   border: 1px solid #3e3e3e2e;
-}
-
-.container .content-wrapper .content .media-wrapper .output-content .videoWrapper #output-canvas {
   display: none;
 }
 
