--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -60,11 +60,6 @@ body {
 				}
 			}
 
-			// .image-src-selector {
-			// 	margin: 0 0 10px 0;
-			// 	font-size: 20px;
-			// }
-
 			.process-start-btn {
 				margin: 20px 0;
 
@@ -91,7 +86,7 @@ body {
 					width: 500px;
 					height: auto;
 
-					.videoWrapper {
+					.video-wrapper {
 						padding: 10px;
 						background: #dbdbdb2e;
 						border: 1px solid #3e3e3e2e;
@@ -104,16 +99,6 @@ body {
 							display: none;
 						}
 					}
-
-					// #image {
-					// 	// height: 100%;
-					// 	width: 100%;
-					// 	object-fit: contain;
-					// 	padding: 10px;
-					// 	border: 1px solid #3e3e3e2e;
-					// 	background: #dbdbdb2e;
-					// 	display: none;
-					// }
 				}
 
 				.output-content {
@@ -122,33 +107,12 @@ body {
 					// width: 500px;
 					// height: auto;
 
-					.videoWrapper {
+					#outputVideoWrapper {
 						padding: 10px;
 						background: #dbdbdb2e;
 						border: 1px solid #3e3e3e2e;
-
-						#output-canvas {
-							// width: 100%;
-							// height: 100%;
-							// object-fit: contain;
-							// padding: 10px;
-							// border: 1px solid #3e3e3e2e;
-							display: none;
-						}
+						display: none;
 					}
-
-					// canvas {
-					// 	// height: 100%;
-					// 	// width: 100%;
-					// 	// object-fit: contain;
-					// 	padding: 10px;
-					// 	background: #dbdbdb2e;
-					// 	// border: 1px solid #3e3e3e2e;
-					// }
-
-					// #output-canvas {
-					// 	display: none;
-					// }
 				}
 			}
 		}
@@ -160,10 +124,6 @@ body {
 				.video-src-selector {
 					margin: 10px 0 10px 20px;
 				}
-
-				// .image-src-selector {
-				// 	margin: 10px 0 10px 20px;
-				// }
 
 				.process-start-btn {
 					margin: 20px 20px;
