--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -81,10 +81,12 @@ body {
 			.media-wrapper {
 				margin-top: 10px;
 				display: flex;
+				flex-direction: column;
 
 				.input-content {
-					width: 500px;
-					height: auto;
+					// width: 500px;
+					// height: auto;
+					display: none;
 
 					.video-wrapper {
 						padding: 10px;
@@ -92,10 +94,8 @@ body {
 						border: 1px solid #3e3e3e2e;
 
 						#video {
-							width: 100%;
-							// height: 100%;
+							// width: 100%;
 							object-fit: contain;
-							// padding: 10px;
 							display: none;
 						}
 					}
@@ -104,8 +104,6 @@ body {
 				.output-content {
 					display: flex;
 					flex-direction: column;
-					// width: 500px;
-					// height: auto;
 
 					#outputVideoWrapper {
 						padding: 10px;
